add spring-boot framework; add async delay to all rest interfaces to simulate non-blocking i/o call